--- a/scss/components/_grids_tab2.scss
+++ b/scss/components/_grids_tab2.scss
@@ -63,6 +63,7 @@
         color: $clr_p;
         background-color: $clr_ss;
         border-left: 1px solid $clr_brdr;
+        border-top: 1px solid $clr_brdr;
         border-bottom: 1px solid $clr_brdr;
         display: flex;
         align-items: center
@@ -71,6 +72,7 @@
     .ans {
         grid-area: ans;
         border-left: 1px solid $clr_brdr;
+        border-top: 1px solid $clr_brdr;
         border-right: 1px solid $clr_brdr;
         border-bottom: 1px solid $clr_brdr;
         display: flex;
