--- a/scss/components/_grids_tab3.scss
+++ b/scss/components/_grids_tab3.scss
@@ -2377,7 +2377,7 @@
     font-family: 'Roboto', sans-serif;
     width: 95%;
     grid-template-areas:
-        "title t1 t2"
+        "title t1 t2 t3"
         "l1 l1c2 l1c3"
         "l2 l2c2 l2c3";
 
