--- a/css/main.css
+++ b/css/main.css
@@ -441,6 +441,601 @@
   padding: 2px 8px;
 }
 
+.grdTb1-4 {
+  display: grid;
+  grid-template-columns: 1fr repeat(3, 120px);
+  grid-template-rows: repeat(10, minmax(48px, auto));
+  grid-auto-columns: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas: "tt t1 t2 t3" "l1 l1c1 l1c2 l1c3" "l2 l2c1 l2c2 l2c3" "l3 l3c1 l3c2 l3c3" "l4 l4c1 l4c2 l4c3" "l5 l5c1 l5c2 l5c3" "l6 l6c1 l6c2 l6c3" "l7 l7c1 l7c2 l7c3" "l8 l8c1 l8c2 l8c3" "l9 l9c1 l9c2 l9c3";
+}
+.grdTb1-4 .tt {
+  grid-area: tt;
+  color: #FFFFFF;
+  background-color: #00A6E2;
+  border-left: 1px solid #e6e6e6;
+  border-top: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+.grdTb1-4 .t1 {
+  grid-area: t1;
+  color: #FFFFFF;
+  background-color: #00A6E2;
+  border-left: 1px solid #e6e6e6;
+  border-top: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px;
+}
+.grdTb1-4 .t2 {
+  grid-area: t2;
+  color: #FFFFFF;
+  background-color: #00A6E2;
+  border-left: 1px solid #e6e6e6;
+  border-top: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px;
+}
+.grdTb1-4 .t3 {
+  grid-area: t3;
+  color: #FFFFFF;
+  background-color: #00A6E2;
+  border-left: 1px solid #e6e6e6;
+  border-right: 1px solid #e6e6e6;
+  border-top: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px;
+}
+.grdTb1-4 .l1 {
+  grid-area: l1;
+  color: #151F6D;
+  background-color: rgba(156, 226, 242, 0.2117647059);
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+.grdTb1-4 .l1c1 {
+  grid-area: l1c1;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l1c1 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l1c2 {
+  grid-area: l1c2;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l1c2 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l1c3 {
+  grid-area: l1c3;
+  border-left: 1px solid #e6e6e6;
+  border-right: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l1c3 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l2 {
+  grid-area: l2;
+  color: #151F6D;
+  background-color: rgba(156, 226, 242, 0.2117647059);
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+.grdTb1-4 .l2c1 {
+  grid-area: l2c1;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l2c1 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l2c2 {
+  grid-area: l2c2;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l2c2 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l2c3 {
+  grid-area: l2c3;
+  border-left: 1px solid #e6e6e6;
+  border-right: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l2c3 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l3 {
+  grid-area: l3;
+  color: #151F6D;
+  background-color: rgba(156, 226, 242, 0.2117647059);
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+.grdTb1-4 .l3c1 {
+  grid-area: l3c1;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l3c1 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l3c2 {
+  grid-area: l3c2;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l3c2 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l3c3 {
+  grid-area: l3c3;
+  border-left: 1px solid #e6e6e6;
+  border-right: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l3c3 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l4 {
+  grid-area: l4;
+  color: #151F6D;
+  background-color: rgba(156, 226, 242, 0.2117647059);
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+.grdTb1-4 .l4c1 {
+  grid-area: l4c1;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l4c1 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l4c2 {
+  grid-area: l4c2;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l4c2 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l4c3 {
+  grid-area: l4c3;
+  border-left: 1px solid #e6e6e6;
+  border-right: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l4c3 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l5 {
+  grid-area: l5;
+  color: #151F6D;
+  background-color: rgba(156, 226, 242, 0.2117647059);
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+.grdTb1-4 .l5c1 {
+  grid-area: l5c1;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l5c1 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l5c2 {
+  grid-area: l5c2;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l5c2 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l5c3 {
+  grid-area: l5c3;
+  border-left: 1px solid #e6e6e6;
+  border-right: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l5c3 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l6 {
+  grid-area: l6;
+  color: #151F6D;
+  background-color: rgba(156, 226, 242, 0.2117647059);
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+.grdTb1-4 .l6c1 {
+  grid-area: l6c1;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l6c1 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l6c2 {
+  grid-area: l6c2;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l6c2 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l6c3 {
+  grid-area: l6c3;
+  border-left: 1px solid #e6e6e6;
+  border-right: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l6c3 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l7 {
+  grid-area: l7;
+  color: #151F6D;
+  background-color: rgba(156, 226, 242, 0.2117647059);
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+.grdTb1-4 .l7c1 {
+  grid-area: l7c1;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l7c1 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l7c2 {
+  grid-area: l7c2;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l7c2 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l7c3 {
+  grid-area: l7c3;
+  border-left: 1px solid #e6e6e6;
+  border-right: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l7c3 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l8 {
+  grid-area: l8;
+  color: #151F6D;
+  background-color: rgba(156, 226, 242, 0.2117647059);
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+.grdTb1-4 .l8c1 {
+  grid-area: l8c1;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l8c1 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l8c2 {
+  grid-area: l8c2;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l8c2 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l8c3 {
+  grid-area: l8c3;
+  border-left: 1px solid #e6e6e6;
+  border-right: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l8c3 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l9 {
+  grid-area: l9;
+  color: #151F6D;
+  background-color: rgba(156, 226, 242, 0.2117647059);
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+.grdTb1-4 .l9c1 {
+  grid-area: l9c1;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l9c1 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l9c2 {
+  grid-area: l9c2;
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l9c2 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+.grdTb1-4 .l9c3 {
+  grid-area: l9c3;
+  border-left: 1px solid #e6e6e6;
+  border-right: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-4 .l9c3 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+
+.grdTb1-5 {
+  display: grid;
+  grid-template-columns: 1fr 120px;
+  grid-template-rows: minmax(48px, auto);
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  margin-bottom: 20px;
+  font-family: "Roboto", sans-serif;
+  width: 95%;
+  grid-template-areas: "title t1" "l1 l1c2";
+}
+.grdTb1-5 .title {
+  grid-area: title;
+  color: #FFFFFF;
+  background-color: #00A6E2;
+  border-left: 1px solid #e6e6e6;
+  border-top: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+.grdTb1-5 .t1 {
+  grid-area: t1;
+  color: #FFFFFF;
+  background-color: #00A6E2;
+  border-left: 1px solid #e6e6e6;
+  border-top: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px;
+}
+.grdTb1-5 .l1 {
+  grid-area: l1;
+  color: #151F6D;
+  background-color: rgba(156, 226, 242, 0.2117647059);
+  border-left: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+.grdTb1-5 .l1c2 {
+  grid-area: l1c2;
+  border-left: 1px solid #e6e6e6;
+  border-right: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  align-items: center;
+}
+.grdTb1-5 .l1c2 input {
+  width: 80%;
+  height: 80%;
+  border: none !important;
+  padding: 2px 8px;
+  text-align: right;
+}
+
 .grdTb2-1a {
   display: grid;
   grid-template-columns: 1fr 300px;
