--- a/css/main.css
+++ b/css/main.css
@@ -292,7 +292,7 @@
 .grdTb1-3 {
   display: grid;
   grid-template-columns: 1fr 120px;
-  grid-template-rows: repeat(6, minmax(48px, auto));
+  grid-template-rows: repeat(5, minmax(48px, auto));
   gap: 0px 0px;
   grid-auto-flow: row;
   margin-bottom: 20px;
@@ -448,6 +448,7 @@
   grid-auto-columns: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
+  margin-bottom: 20px;
   grid-template-areas: "tt t1 t2 t3" "l1 l1c1 l1c2 l1c3" "l2 l2c1 l2c2 l2c3" "l3 l3c1 l3c2 l3c3" "l4 l4c1 l4c2 l4c3" "l5 l5c1 l5c2 l5c3" "l6 l6c1 l6c2 l6c3" "l7 l7c1 l7c2 l7c3" "l8 l8c1 l8c2 l8c3" "l9 l9c1 l9c2 l9c3";
 }
 .grdTb1-4 .tt {
